
          cbrt
          fix
          frac
          intersect
          interval
          ismember
          finiteset
          has
          linspace
          logspace
          max
          min
          rewrite
          round
          union
          unique

  * Bug fix for working with certain unevaluated integrals.

  * Bug fixes for function_handle, fortran and ccode.

  * Errors raised in Python code are now caught and passed back to Octave
    in most cases.  This simplies implementation.
      - Note some error messages have changed slightly.
      - Windows users now see previously hidden error messages.
      - Stack traces from Python are now hidden: could change in future.
    Thanks to @latot.

  * New functions for converting sym to integers.  Thanks to @latot.

  * New functions for dealing with sets and intervals and operations
    on them, thanks to @latot.

  * Fourier and Laplace transforms (and their inverses) use a
    different implementation which improves handling of delta
    functions.  Ideally, a later version will consolidate this with
    SymPy's original implementations.

  * Documentation improvements.



octsympy 2.2.4 (2015-12-14)
===========================

  * Fix display on Octave 3.8.

  * Support for SymPy 0.7.6.1.



octsympy 2.2.3 (2015-11-25)
===========================

  * New commands:

          cross
          dot

  * sym('var') is more robust in case var happens to be a special
    value in SymPy.  Now sym('E') is just a symbol rather than
    exp(sym(1)).  Also sym('E1') and sym('Eq') no longer give errors.

  * Fix bug in assigning to column vectors, thanks to Grzegorz Dudziuk.

  * During install, test for PATH problems on Windows (issue #236).

  * Fix for Octave 4.1+ development versions, thanks to Mike Miller.



octsympy 2.2.2 (2015-07-03)
===========================

  * Fix for configure script using Python 3 (thanks Vadim Gribanov).
